# dbt-tutorial

./: CustomerPayload.ndjson  aura_surveys_20221217.csv  aura_surveys_2022_2023_cleaned.csv  aura_surveys_2022_2023_tmp.csv  load_dummy_data.py  pyproject.toml  sap_api_gateway.py  selectors.yml
aura_surveys/: analyse_schema.py  aura_survey_bq_json  aura_surveys_mini_sample.ndjson  aura_surveys_sample_2022.ndjson  aura_surveys_sample_2023.ndjson
cf_sap_api_gateway/: test_api_gateway.py
jaffle_shop/: README.md  dbt_project.yml
jaffle_shop/models/example/: stg_customers.sql  stg_orders.sql
jaffle_shop/tests/: yan_test.py
qualtrics_test/: qualtrics_aura_export.py  read_qualtrics_json.py
schema_compare/: aura_surveys_schema_v2.json  compare_schema.py
